2012-07-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/include/yarp/os/Run.h,
	src/libYARP_name/src/BootstrapServer.cpp,
	src/yarpserver/src/yarpserver3.cpp,
	src/libYARP_OS/include/yarp/os/impl/PlatformMap.h,
	src/libYARP_OS/include/yarp/os/impl/RunProcManager.h,
	src/libYARP_sig/src/Vector.cpp: from Anne van Rossum, some fixes 
	for YARP without ACE configuration [thanks Anne van Rossum]

2012-07-12  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: translate ResourceFinder::configure to
	use std::vector<std::string> (aka SVector in YARP's SWIG
	translation) [thanks Stephane Lallee]

2012-07-10  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* example/swig/yarp.i: rename RFModule::attach(RpcServer&) out
	of harms way to attach_rpc_server [thanks Stephane Lallee]

2012-07-06  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/carriers/bayer_carrier/BayerCarrier.cpp
	(modifyIncomingData): fix reporting of errors on unreliable
	connections [thanks Vadim Tikhanoff] [thanks Lorenzo Natale]

	* src/idls/thrift/src/t_yarp_generator.cc (generate_service): 
	account for length of return types [thanks Elena Ceseracciu]

2012-07-03 Lorenzo Natale <lorenzo.natale@iit.it>
    * setting version 2.3.19 to follow interface changes
	
2012-07-03 Ugo Pattacini <ugo.pattacini@iit.it>
    * gaze I/F's: added get/setSaccadesActivationAngle() methods.

2012-06-20 Lorenzo Natale <lorenzo.natale@iit.it>
    * setting version 2.3.18 to follow interface changes
    * removed compact in class struct definition to make visual studio 8
      happy

2012-06-20  Marco Randazzo  <marco.randazzo@iit.it>

    *  src/libYARP_dev/include/yarp/dev/serverInertial.h
    fixed issue related to the assignment of timestamps by the inertial driver
    
2012-06-19  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h,GazeControl.h:
     added events handling.

2012-06-18  Paul Fitzpatrick  <paul@robotrebuilt.com>
